test-data/negative/missing_property_set_is.aadl
-- ERROR: Missing 'is' keyword after property set name
property set MyProps
    p1: aadlinteger applies to (all);
end MyProps;
